--- a/walk to circle/Base.lproj/Main.storyboard
+++ b/walk to circle/Base.lproj/Main.storyboard
@@ -4,13 +4,14 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
         <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Initial View Controller-->
         <scene sceneID="LHM-lh-aW3">
             <objects>
-                <viewController id="TQL-qV-S3z" sceneMemberID="viewController">
+                <viewController id="TQL-qV-S3z" customClass="InitialViewController" customModule="WalkToCircle" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="0rg-T5-ctT"/>
                         <viewControllerLayoutGuide type="bottom" id="175-QF-hRf"/>
@@ -18,7 +19,27 @@
                     <view key="view" contentMode="scaleToFill" id="2eI-8U-YjA">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="0.98854736160000001" blue="0.45219169729999997" alpha="1" colorSpace="calibratedRGB"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launch_screen_background_1024x1024.png" translatesAutoresizingMaskIntoConstraints="NO" id="EQ4-bT-itd">
+                                <rect key="frame" x="0.0" y="20" width="600" height="580"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launch_scren_logo" translatesAutoresizingMaskIntoConstraints="NO" id="vlo-Vg-RkH">
+                                <rect key="frame" x="200" y="200" width="200" height="200"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="vlo-Vg-RkH" secondAttribute="height" multiplier="1:1" id="8tt-qj-KXc"/>
+                                    <constraint firstAttribute="width" constant="200" id="fp4-1Z-TNo"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.47592381075602652" green="0.49573338360840824" blue="0.70571485584365323" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="vlo-Vg-RkH" firstAttribute="centerY" secondItem="2eI-8U-YjA" secondAttribute="centerY" id="6uV-by-f1X"/>
+                            <constraint firstAttribute="trailing" secondItem="EQ4-bT-itd" secondAttribute="trailing" id="9td-6h-2rh"/>
+                            <constraint firstItem="175-QF-hRf" firstAttribute="top" secondItem="EQ4-bT-itd" secondAttribute="bottom" id="MpP-x2-giM"/>
+                            <constraint firstItem="vlo-Vg-RkH" firstAttribute="centerX" secondItem="2eI-8U-YjA" secondAttribute="centerX" id="iym-pf-ArZ"/>
+                            <constraint firstItem="EQ4-bT-itd" firstAttribute="leading" secondItem="2eI-8U-YjA" secondAttribute="leading" id="qwp-Ky-gdA"/>
+                            <constraint firstItem="EQ4-bT-itd" firstAttribute="top" secondItem="0rg-T5-ctT" secondAttribute="bottom" id="u1t-xS-4GQ"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="omQ-Fn-hmy" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -43,7 +64,7 @@
                             <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Output Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BVb-gS-cVf">
                                 <rect key="frame" x="15" y="28" width="100" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" placeholderIntrinsicWidth="92" placeholderIntrinsicHeight="92" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageWhenHighlighted="NO" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WD4-Gm-ry7">
@@ -120,7 +141,7 @@
 
 Your location info never leaves your phone and stays private.</string>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9FK-8X-uyD">
@@ -136,7 +157,7 @@ Your location info never leaves your phone and stays private.</string>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Please enable location services in Settings &gt; Privacy &gt; Location Services." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="p6h-Ln-TdQ">
                                 <rect key="frame" x="20" y="331" width="560" height="19.5"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
@@ -254,7 +275,7 @@ Your location info never leaves your phone and stays private.</string>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Unfortunately the app won't work on your device because it can not monitor geo regions. I am sorry for that. " textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3pm-pU-kPR">
                                 <rect key="frame" x="20" y="279" width="560" height="41"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
@@ -343,6 +364,7 @@ Your location info never leaves your phone and stays private.</string>
         <image name="continue.png" width="92" height="92"/>
         <image name="continue_highlighted.png" width="92" height="92"/>
         <image name="launch_screen_background_1024x1024.png" width="1024" height="768"/>
+        <image name="launch_scren_logo" width="1024" height="1024"/>
         <image name="play.png" width="92" height="92"/>
         <image name="rewind.png" width="92" height="92"/>
         <image name="stop.png" width="92" height="92"/>
