--- a/Watch/Base.lproj/Interface.storyboard
+++ b/Watch/Base.lproj/Interface.storyboard
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="9059" systemVersion="15B42" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="AgC-eL-Hgc">
+<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="9060" systemVersion="15B42" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="AgC-eL-Hgc">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBWatchKitPlugin" version="9019"/>
     </dependencies>
     <scenes>
         <!--Walk-->
         <scene sceneID="5ED-qi-gTZ">
             <objects>
-                <controller identifier="Walk" hidesWhenLoading="NO" id="WBC-Ov-C6Q" customClass="WalkInterfaceController" customModule="Watch_Extension">
+                <controller identifier="Walk" hidesWhenLoading="NO" id="WBC-Ov-C6Q" customClass="DiagnoseInterfaceController" customModule="Watch_Extension">
                     <items>
                         <label alignment="left" text="Walk" numberOfLines="0" id="KR0-rp-mk0"/>
                         <label alignment="left" text="Label" numberOfLines="0" id="GrH-D4-12k"/>
@@ -19,7 +19,21 @@
                     </connections>
                 </controller>
             </objects>
-            <point key="canvasLocation" x="236" y="95"/>
+            <point key="canvasLocation" x="373" y="95"/>
+        </scene>
+        <!--Interface Controller-->
+        <scene sceneID="hRw-r8-Ka3">
+            <objects>
+                <controller id="2XW-gs-aWx">
+                    <items>
+                        <imageView width="1" height="1" alignment="center" image="Watch_compass" contentMode="scaleAspectFit" id="F5j-GN-BMd"/>
+                    </items>
+                    <connections>
+                        <segue destination="WBC-Ov-C6Q" kind="relationship" relationship="nextPage" id="9tW-KE-V2K"/>
+                    </connections>
+                </controller>
+            </objects>
+            <point key="canvasLocation" x="202" y="95"/>
         </scene>
         <!--Start Interface Controller-->
         <scene sceneID="aou-V4-d1y">
@@ -36,7 +50,7 @@
                     </items>
                     <edgeInsets key="margins" left="1" right="1" top="0.0" bottom="0.0"/>
                     <connections>
-                        <segue destination="WBC-Ov-C6Q" kind="relationship" relationship="nextPage" id="Dqi-eb-kBj"/>
+                        <segue destination="2XW-gs-aWx" kind="relationship" relationship="nextPage" id="KLz-zq-cPS"/>
                     </connections>
                 </controller>
             </objects>
