--- a/Watch/Base.lproj/Interface.storyboard
+++ b/Watch/Base.lproj/Interface.storyboard
@@ -26,7 +26,11 @@
             <objects>
                 <controller id="2XW-gs-aWx">
                     <items>
-                        <imageView width="1" height="1" alignment="center" image="Watch_compass" contentMode="scaleAspectFit" id="F5j-GN-BMd"/>
+                        <group width="1" alignment="center" backgroundImage="watch_compass_background" contentMode="scaleAspectFit" id="IvX-p4-T9a">
+                            <items>
+                                <imageView width="1" height="1" alignment="center" image="compass_arrow_0" contentMode="scaleAspectFit" id="F5j-GN-BMd"/>
+                            </items>
+                        </group>
                     </items>
                     <connections>
                         <segue destination="WBC-Ov-C6Q" kind="relationship" relationship="nextPage" id="9tW-KE-V2K"/>
