--- a/Watch/Base.lproj/Interface.storyboard
+++ b/Watch/Base.lproj/Interface.storyboard
@@ -28,7 +28,7 @@
                     <items>
                         <group width="1" alignment="center" backgroundImage="watch_compass_background" contentMode="scaleAspectFit" id="IvX-p4-T9a">
                             <items>
-                                <imageView width="1" height="1" alignment="center" image="compass_arrow_0" contentMode="scaleAspectFit" id="F5j-GN-BMd"/>
+                                <imageView width="1" height="1" alignment="center" image="compass_arrow_" contentMode="scaleAspectFit" id="F5j-GN-BMd"/>
                             </items>
                         </group>
                     </items>
